--- a/main/templates/main/coach_revenue_report.html
+++ b/main/templates/main/coach_revenue_report.html
@@ -96,7 +96,7 @@
     }
 </style>
 
-<div class="min-h-screen bg-gray-100 py-8 px-4 sm:px-6 lg:px-8">
+<div class="min-h-screen bg-white py-8 px-4 sm:px-6 lg:px-8">
     <div class="max-w-7xl mx-auto">
 
         <!-- Tombol Kembali -->
